--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,18 @@
 [versions]
 agp = "8.3.2"
-androidImageCropper = "2.8.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
-appcompat = "1.6.1"
+appcompat = "1.7.0"
 material = "1.11.0"
-activity = "1.8.0"
+activity = "1.9.2"
 constraintlayout = "2.1.4"
 objectDetectionCommon = "18.0.0"
-playServicesMlkitTextRecognition = "17.0.0"
-ucrop = "2.2.8"
+mlkit-text-recognition = "16.0.0"
 navigationRuntime = "2.7.7"
+playServicesMlkitTextRecognitionCommon = "17.0.0"
+textRecognition = "17.0.0"
+playServicesVision = "20.1.3"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -19,13 +20,16 @@ ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitV
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+activity = { group = "androidx.activity", name = "activity", version = "1.9.2" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 navigation-fragment = { module = "androidx.navigation:navigation-fragment", version.ref = "navigationRuntime" }
-navigation-ui = { module = "androidx.navigation:navigation-ui", version.ref = "navigationRuntime" }
-object-detection-common = { group = "com.google.mlkit", name = "object-detection-common", version.ref = "objectDetectionCommon" }
-play-services-mlkit-text-recognition = { module = "com.google.android.gms:play-services-mlkit-text-recognition", name = "play", version.ref = "playServicesMlkitTextRecognition" }
 navigation-runtime = { group = "androidx.navigation", name = "navigation-runtime", version.ref = "navigationRuntime" }
+play-services-mlkit-text-recognition-common = { group = "com.google.mlkit:text-recognition", name = "play-services-mlkit-text-recognition-common", version.ref = "playServicesMlkitTextRecognitionCommon" }
+text-recognition = { module = "com.google.mlkit:text-recognition", name = "text_recognition", version.ref = "textRecognition" }
+play-services-vision = { group = "com.google.android.gms", name = "play-services-vision", version.ref = "playServicesVision" }
+
+
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
